# voiceCLI

./: .env.example  .gitignore  .license-policy.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  package.json  pyproject.toml  voicecli.example.toml  voicecli.vocab.example  voiceme.toml
.claude/: dev-core.yml  run-dashboard.ts  settings.json  stack.yml.example
.claude-plugin/: marketplace.json  plugin.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-merge.yml  ci.yml  deploy-preview.yml  pr-title.yml
TTS/texts_in/: futur_ia.md
artifacts/frames/: 13-python-library-api-frame.mdx  28-centralize-shortcuts-frame.mdx  31-tts-fifo-queue-frame.mdx  6-stt-serve-daemon-frame.mdx  7-dictate-toggle-hotkey-frame.mdx
artifacts/plans/: 13-python-library-api-plan.mdx  28-centralize-shortcuts-plan.mdx  31-tts-fifo-queue-plan.mdx  6-stt-serve-daemon-plan.mdx  7-dictate-toggle-hotkey-plan.mdx
artifacts/specs/: 13-python-library-api-spec.mdx  28-centralize-shortcuts-spec.mdx  31-tts-fifo-queue-spec.mdx  6-stt-serve-daemon-spec.mdx  7-dictate-toggle-hotkey-spec.mdx
docs/: configuration.md  contributing.md  dictation-setup.md
docs/architecture/: README.md  (+4 more)
scripts/: darwinisme_chatterbox.md  darwinisme_qwen_intense.md  darwinisme_socialisme.md
tests/: test_api.py  test_markdown.py  test_overlay.py  test_samples_from_url.py  test_stt_client.py  test_stt_daemon.py  test_tts_daemon.py  test_voice_priority.py
tools/: license_check.py
(+45 files in other folders)
