[project]
name = "voicecli"
version = "0.1.0"
description = "Unified CLI for voice generation — Qwen3-TTS & Chatterbox backends"
requires-python = ">=3.11,<3.13"
dependencies = [
    "typer[all]>=0.12",
    "qwen-tts",
    "faster-qwen3-tts",
    "chatterbox-tts",
    "soundfile",
    "lameenc>=1.7",
    "faster-whisper>=1.2",
    "torch>=2.7",
    "torchaudio>=2.7",
]

[project.scripts]
voicecli = "voicecli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voicecli"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[tool.uv]
override-dependencies = [
    "torch>=2.7",
    "torchaudio>=2.7",
    # chatterbox pins transformers==4.46.3, qwen-tts pins ==4.57.3
    "transformers>=4.57.3",
    # chatterbox pins numpy<1.26.0 which doesn't build on Python 3.12
    "numpy>=1.26",
    # pandas 2.1.0 doesn't build on 3.12, gradio pulls it in
    "pandas>=2.2",
    # ml-dtypes/onnx need numpy 2.x compat builds
    "ml-dtypes>=0.5",
    "onnx>=1.20",
]

[tool.pytest.ini_options]
# src layout: expose src/ to pytest without relying on editable install
pythonpath = ["src"]

[project.optional-dependencies]
hotkey = ["pynput>=1.7"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pre-commit>=4.5.1",
    "pip-licenses>=5.5.1",
]
